package net.imshit.shoot.enemy;

import net.imshit.shoot.ShootStrategy;

/**
 * 敌机策略
 *
 * @author Jim
 */
public interface EnemyShootStrategy extends ShootStrategy {
}
