package net.imshit.shoot.hero;

import net.imshit.shoot.ShootStrategy;

/**
 * 英雄机的射击策略捏
 *
 * @author Jim
 */
public interface HeroShootStrategy extends ShootStrategy {
}
